--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,14 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
+  fl_chart: ^0.40.0
   flutter:
     sdk: flutter
+  graphic: ^2.5.0
   http: ^1.2.1
   infinite_scroll_pagination: ^4.0.0
-  shared_preferences: ^2.0.6
   intl: ^0.17.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_lints: ^3.0.0
