--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
+  firebase_core: ^3.6.0
   fl_chart: ^0.40.0
   flutter:
     sdk: flutter
@@ -15,6 +16,7 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   intl: ^0.17.0
   shared_preferences: ^2.0.6
+  firebase_auth: ^4.3.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
